# pomodoro

./: .env.example  .env.test  .flake8  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  mypy.ini
app/: Dockerfile  Makefile  alembic.ini  main.py  pyproject.toml  pytest.ini  settings.py  startup.sh
app/auth/: dependencies.py  exceptions.py  routes.py  schemas.py  services.py
app/core/: routes.py  utils.py
app/database/: cache_depends.py  db.py  db_depends.py
app/database/migrations/: env.py
app/database/migrations/versions/: 2024_10_24_15:28_initial_migration.py  2024_10_24_20:26_task_category_relationships.py  2024_10_26_19:07_user_model.py  2024_10_27_14:02_tasks_author.py
app/services/: amqp_consumer.py  dependencies.py
app/services/email_service/: connectors.py  mailing.py  schemas.py
app/tasks/: __init__.py  dependencies.py  exceptions.py  models.py  routes.py  schemas.py  services.py
app/tasks/repositories/: cache_repositories.py  db_query_repositories.py
app/tests/: __init__.py  conftest.py  test_repo.py  test_response.py
app/tests/fixtures/: client_sessions.py  data.py  instances.py  repositories_services.py
app/user/: __init__.py  constants.py  dependencies.py  exceptions.py  models.py  repositories.py  routes.py  schemas.py  services.py  utils.py
mailing_microcervice/: .env.example  .flake8  .gitignore
mailing_microcervice/app/: .env.example  Dockerfile  Makefile  main.py  pyproject.toml  settings.py  startup.sh
mailing_microcervice/app/mailing/: clients.py  connectors.py  consumers.py  schemas.py  services.py
nginx/: nginx.conf
