[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Marsel <lllmarselll@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
flake8 = "^7.1.1"
mypy = "^1.12.1"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
redis = "^5.2.0"
setuptools = "^75.2.0"
email-validator = "^2.2.0"
passlib = "^1.7.4"
bcrypt = "4.0.1"
types-passlib = "^1.7.7.20240819"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
types-python-jose = "^3.3.4.20240106"
python-multipart = "^0.0.12"
gunicorn = "^23.0.0"
pytest-asyncio = "0.20.1"
pytest = "^8.3.3"
httpx = "^0.27.2"
trio = "^0.27.0"
pytest-env = "^1.1.5"
aio-pika = "^9.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
